test/corpus/L1/negative/radix-base-invalid.st
"---
kind: negative
section: error.radix-base
codes: E_RADIX_BASE
---"
1r0
